# interpreter

./: CMakeLists.txt  README.md
include/: calculator.h  functionHandler.h  interpreter.h  token.h  variablesStorage.h
src/: calculator.cpp  functionHandler.cpp  interpreter.cpp  main.cpp  token.cpp  variablesStorage.cpp
test/: calculator_test.cpp  functionHandler_test.cpp  variablesStorage_test.cpp
